feat(kernel): added USB serial drivers for Prolific (PL2303) and QinHeng (CH341) (#598)
This allows to use omnect devices as serial console supervisor for other
devices beside the widespread FTDI based USB-to-Serial converters.

---------

Signed-off-by: Harry Waschkeit <44188360+HarryWaschkeit@users.noreply.github.com>

--- a/conf/distro/include/omnect-os-kernel.conf
+++ b/conf/distro/include/omnect-os-kernel.conf
@@ -13,6 +13,7 @@ OMNECT_KERNEL_SRC_URI = " \
     file://enable-ext4-fs-security.cfg \
     file://disable-kvm.cfg \
     file://netfilter.cfg \
+    file://usb-serial-devices.cfg \
     file://virtualization.cfg \
     file://wireguard.cfg \
     ${@bb.utils.contains('MACHINE_FEATURES', 'pstore', 'file://pstore.cfg', '', d)} \
