--- a/kas/distro/omnect-os.yaml
+++ b/kas/distro/omnect-os.yaml
@@ -58,6 +58,8 @@ env:
   # is image of type release?
   OMNECT_RELEASE_IMAGE: "0"
 
+  META_OMNECT_GIT_SHA: "META_OMNECT_GIT_SHA_NOT_SET"
+  META_OMNECT_GIT_BRANCH: "META_OMNECT_GIT_BRANCH_NOT_SET"
   META_OMNECT_GIT_REPO: "META_OMNECT_GIT_REPO_NOT_SET"
   OMNECT_OS_GIT_SHA: "OMNECT_OS_GIT_SHA_NOT_SET"
   OMNECT_OS_GIT_BRANCH: "OMNECT_OS_GIT_BRANCH_NOT_SET"
