--- a/kas/distro/omnect-os.yaml
+++ b/kas/distro/omnect-os.yaml
@@ -58,6 +58,9 @@ env:
   # is image of type release?
   OMNECT_RELEASE_IMAGE: "0"
 
+  EXTRA_MACHINE_GIT_SHA: "EXTRA_MACHINE_GIT_SHA_NOT_SET"
+  EXTRA_MACHINE_GIT_BRANCH: "EXTRA_MACHINE_GIT_BRANCH_NOT_SET"
+  EXTRA_MACHINE_GIT_REPO: "EXTRA_MACHINE_GIT_REPO_NOT_SET"
   META_OMNECT_GIT_SHA: "META_OMNECT_GIT_SHA_NOT_SET"
   META_OMNECT_GIT_BRANCH: "META_OMNECT_GIT_BRANCH_NOT_SET"
   META_OMNECT_GIT_REPO: "META_OMNECT_GIT_REPO_NOT_SET"
