--- a/recipes-connectivity/wpa-supplicant/wpa-supplicant/wpa_supplicant@.service
+++ b/recipes-connectivity/wpa-supplicant/wpa-supplicant/wpa_supplicant@.service
@@ -7,11 +7,15 @@ Wants=network.target
 # unfortunately this has no real benefit: https://github.com/systemd/systemd/issues/985
 ConditionPathExists=/sys/class/net/%i
 
+StartLimitIntervalSec=120
+
 # NetworkManager users will probably want the dbus version instead.
 
 [Service]
 Type=simple
 ExecStart=/usr/sbin/wpa_supplicant -c/etc/wpa_supplicant.conf -i%I
+Restart=on-failure
+RestartSec=5
 
 [Install]
 WantedBy=multi-user.target
