refactor(wpa_supplicant): added StartLimitBurst setting in service file for the sake of uniformity
Signed-off-by: Harry Waschkeit <44188360+HarryWaschkeit@users.noreply.github.com>

--- a/recipes-connectivity/wpa-supplicant/wpa-supplicant/wpa_supplicant@.service
+++ b/recipes-connectivity/wpa-supplicant/wpa-supplicant/wpa_supplicant@.service
@@ -7,6 +7,7 @@ Wants=network.target
 # unfortunately this has no real benefit: https://github.com/systemd/systemd/issues/985
 ConditionPathExists=/sys/class/net/%i
 
+StartLimitBurst=10
 StartLimitIntervalSec=120
 
 # NetworkManager users will probably want the dbus version instead.
