feat(grub): allow extra kernel cmdline parameters set from grubenv
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/recipes-bsp/grub/grub-efi/omnect.inc.in
+++ b/recipes-bsp/grub/grub-efi/omnect.inc.in
@@ -34,6 +34,6 @@ fi
 
 menuentry 'omnect-os' --unrestricted {
     set root=(hd0,gpt${omnect_os_bootpart})
-    linux /boot/bzImage rootpart=${omnect_os_bootpart} ${kernel_param_rootblk} @@APPEND@@
+    linux /boot/bzImage rootpart=${omnect_os_bootpart} ${kernel_param_rootblk} @@APPEND@@ ${extra_bootargs}
     initrd /boot/initramfs.cpio.gz
 }
