chore(systemd): remove logind and pam from omnect-os
Signed-off-by: Marcel Lilienthal <134974+mlilien@users.noreply.github.com>

--- a/conf/distro/include/omnect-os-distro.conf
+++ b/conf/distro/include/omnect-os-distro.conf
@@ -139,6 +139,9 @@ PACKAGES:remove:pn-openssl = "openssl-misc"
 PACKAGECONFIG:remove:pn-polkit = "mozjs"
 PACKAGECONFIG:append:pn-polkit = " duktape"
 
+# remove logind + pam
+PACKAGECONFIG:remove:pn-systemd = "logind pam"
+
 # restrict dependencies to python
 # we can't get rid of python though due to
 # gobject-introspection dependency in avahi + polkit
