refactor(kernel): added audit.cfg kernel config snippet for settings uniform on all platforms
Signed-off-by: Harry Waschkeit <44188360+HarryWaschkeit@users.noreply.github.com>

--- a/conf/distro/include/omnect-os-kernel.conf
+++ b/conf/distro/include/omnect-os-kernel.conf
@@ -7,6 +7,7 @@ OMNECT_KERNEL_SRC_URI_LTE = " \
 "
 
 OMNECT_KERNEL_SRC_URI = " \
+    file://audit.cfg \
     file://cpu_freq_default_gov_schedutil.cfg \
     file://enable-overlayfs.cfg \
     file://enable-cifs.cfg \
